# prime1

./: README.md  pyproject.toml
src/: generator.py
src/primepackage/: generator.py  primeio.py  primemodule.py
src/primepackage/data/: output.csv
tests/: test_is_prime.py
