[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Project Metadata
[tool.poetry]
name = "primepackage"
version = "0.1.0"
description = "Demo project managed by Poetry"
authors = ["Lin Chen <lin.chen@example.com>"]
readme = "README.md"

packages = [
  { include = "primepackage", from = "src" }
]

# List of Dependencies
[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
pandas = "^2.0"
matplotlib = "^3.10.6"

[tool.poetry.scripts]
myprimes = "generator:main"

# Dev extras
[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"

# Unit test
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
